Fix preview of Shape Layers in Transform Tool and Move Tool

This patch defines new "type" of layers, KisCroppedOriginalLayerInterface,
which tells that this layer may have some data outside layer bounds that
is not rendered normally. So the tools that want to use this data
should first call:

interface->forceUpdateHiddenAreaOnOriginal()

and wait until the layer generates this data.

BUG:392717